--- a/Modeling.ipynb
+++ b/Modeling.ipynb
@@ -424,7 +424,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 207,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "x_train = x[:90811]\n",
+    "x_test = x[90811:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n_estimators:250, Mean:0.06961142, STD:0.00302220\n",
+      "n_estimators:300, Mean:0.06960884, STD:0.00299001\n",
+      "n_estimators:350, Mean:0.06961899, STD:0.00299126\n"
+     ]
+    }
+   ],
+   "source": [
+    "# n_estimators=300  --> 0.06925492\n",
+    "for est in [250,300,350]:\n",
+    "    reg = RandomForestRegressor(n_estimators=est, max_depth= 10)\n",
+    "    cv_score = cross_val_score(reg, x_train, y_train, scoring=scorer_mae, cv=3)\n",
+    "    score_mean = cv_score.mean()\n",
+    "    score_std = cv_score.std()\n",
+    "#     if score_mean < 0.0696:\n",
+    "    print('n_estimators:{0}, Mean:{1:.8f}, STD:{2:.8f}'.format(est, score_mean, score_std))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Score: 0.06960884\n",
+    "params = {'max_depth': 10,\n",
+    "          'n_estimators': 300}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
    "metadata": {
     "collapsed": false
    },
@@ -432,57 +486,59 @@
     {
      "data": {
       "text/plain": [
-       "(90811, 62)"
+       "RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=10,\n",
+       "           max_features='auto', max_leaf_nodes=None,\n",
+       "           min_impurity_split=1e-07, min_samples_leaf=1,\n",
+       "           min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
+       "           n_estimators=300, n_jobs=1, oob_score=False, random_state=None,\n",
+       "           verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x_train = x[:90811]"
+    "reg = RandomForestRegressor()\n",
+    "reg.set_params(**params)\n",
+    "reg.fit(x_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 210,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(2985217, 62)\n",
-      "(2985217, 62)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(x[90811:].shape)\n",
-    "print(x_test.shape)"
+    "y_pred = reg.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sub = pd.read_csv('sample_submission.csv')\n",
+    "for c in sub.columns[sub.columns != 'ParcelId']:\n",
+    "    sub[c] = y_pred\n",
+    "\n",
+    "sub.to_csv('result_rf.csv', index=False, float_format='%.8f')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "# n_estimators=200  --> 0.07474098\n",
-    "for est in [150,200,250,300]:\n",
-    "    reg = RandomForestRegressor(n_estimators=est)\n",
-    "    cv_score = cross_val_score(reg, x[:90811], y_train, scoring=scorer_mae, cv=3)\n",
-    "    score_mean = cv_score.mean()\n",
-    "    score_std = cv_score.std()\n",
-    "#     if score_mean < 0.0696:\n",
-    "    print('n_estimators:{0}, Mean:{1:.8f}, STD:{2:.8f}'.format(est, score_mean, score_std))"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -766,73 +822,42 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ensemble"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 212,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "result = pd.read_csv('results/result_0.0646523.csv')"
+    "rf = pd.read_csv('result_rf.csv')\n",
+    "gbm = pd.read_csv('result_lightgbm.csv')\n",
+    "xgb = pd.read_csv('result_xgb.csv')\n",
+    "y_rf = rf['201610']\n",
+    "y_gbm = gbm['201610']\n",
+    "y_xgb = xgb['201610']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "y_pred = result['201610']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 132,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['ParcelId', '201610', '201611', '201612', '201710', '201711', '201712'], dtype='object')"
-      ]
-     },
-     "execution_count": 132,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "result.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 214,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "result['201611'] = y_pred*(1+0.022369)\n",
-    "result['201612'] = y_pred*(1+0.022369)**2\n",
-    "result['201710'] = y_pred*(1+0.022369)**6\n",
-    "result['201711'] = y_pred*(1+0.022369)**7\n",
-    "result['201712'] = y_pred*(1+0.022369)**8"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 136,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "result.to_csv('result_timeseries.csv', index=False, float_format='%.8f')"
+    "y_ensemble = (y_rf+y_gbm)/2\n",
+    "sub = pd.read_csv('sample_submission.csv')\n",
+    "for c in sub.columns[sub.columns != 'ParcelId']:\n",
+    "    sub[c] = y_ensemble\n",
+    "\n",
+    "sub.to_csv('result_ensemble.csv', index=False, float_format='%.8f')"
    ]
   },
   {
