Train after removing outliers

--- a/Modeling.ipynb
+++ b/Modeling.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 220,
    "metadata": {
     "collapsed": false
    },
@@ -23,63 +23,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/Leslie/anaconda3/lib/python3.5/site-packages/IPython/core/interactiveshell.py:2717: DtypeWarning: Columns (22,32,34,49,55) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/Users/Leslie/anaconda3/lib/python3.5/site-packages/IPython/core/interactiveshell.py:2717: DtypeWarning: Columns (22,47,53) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  interactivity=interactivity, compiler=compiler, result=result)\n"
      ]
     }
    ],
    "source": [
-    "train = pd.read_csv('train_2016.csv')\n",
-    "prop = pd.read_csv('properties_2016.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "prop['bed2bath'] = prop['bedroomcnt']/prop['bathroomcnt']\n",
-    "prop['bed2calbath'] = prop['bedroomcnt']/prop['calculatedbathnbr']\n",
-    "prop['areaperbedroom'] = prop['calculatedfinishedsquarefeet']/prop['bedroomcnt']\n",
-    "prop['livingarearate'] = prop['finishedsquarefeet12']/prop['finishedsquarefeet15']\n",
-    "prop['bed2fullbath'] = prop['bedroomcnt']/prop['fullbathcnt']\n",
-    "prop['areaperroom'] = prop['calculatedfinishedsquarefeet']/prop['roomcnt']\n",
-    "prop['houseage'] = 2016 - prop['yearbuilt']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(90811, 62) (90811,)\n"
-     ]
-    }
-   ],
-   "source": [
-    "for c, dtype in zip(prop.columns, prop.dtypes):\t\n",
-    "    if dtype == np.float64:\t\t\n",
-    "        prop[c] = prop[c].astype(np.float32)\n",
-    "\n",
-    "df_train = train.merge(prop, how='left', on='parcelid')\n",
-    "\n",
-    "x_train = df_train.drop(['parcelid', 'logerror', 'transactiondate', 'propertyzoningdesc', 'propertycountylandusecode'], axis=1)\n",
-    "y_train = df_train['logerror'].values\n",
-    "print(x_train.shape, y_train.shape)\n",
-    "\n",
-    "train_columns = x_train.columns\n",
-    "\n",
-    "for c in x_train.dtypes[x_train.dtypes == object].index.values:\n",
-    "    x_train[c] = (x_train[c] == True)\n"
+    "x_train = pd.read_csv('x_train.csv')\n",
+    "x_test = pd.read_csv('x_test.csv')"
    ]
   },
   {
@@ -101,7 +52,6 @@
    "source": [
     "# from hyperopt import fmin, tpe, hp, STATUS_OK, Trials\n",
     "from sklearn.model_selection import cross_val_score\n",
-    "import xgboost as xgb\n",
     "from sklearn.metrics import mean_absolute_error\n",
     "from sklearn.metrics import make_scorer"
    ]
@@ -192,18 +142,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 232,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "scorer_mae = make_scorer(mean_absolute_error)\n"
+    "scorer_mae = make_scorer(mean_absolute_error)\n",
+    "import xgboost as xgb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 233,
    "metadata": {
     "collapsed": false
    },
@@ -212,11 +163,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "learning_rate:0.06, Mean:0.06947398, STD:0.00300854\n",
-      "learning_rate:0.061, Mean:0.06948449, STD:0.00301388\n",
-      "learning_rate:0.062, Mean:0.06947997, STD:0.00299754\n",
-      "learning_rate:0.063, Mean:0.06946019, STD:0.00302769\n",
-      "learning_rate:0.064, Mean:0.06943554, STD:0.00301250\n"
+      "learning_rate:0.06, Mean:0.06944411, STD:0.00294492\n",
+      "learning_rate:0.061, Mean:0.06935982, STD:0.00306369\n",
+      "learning_rate:0.062, Mean:0.06942729, STD:0.00298721\n",
+      "learning_rate:0.063, Mean:0.06941760, STD:0.00297759\n",
+      "learning_rate:0.064, Mean:0.06949333, STD:0.00297354\n"
      ]
     }
    ],
@@ -541,6 +492,46 @@
    "source": []
   },
   {
+   "cell_type": "code",
+   "execution_count": 215,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=3,\n",
+       "           max_features='auto', max_leaf_nodes=None,\n",
+       "           min_impurity_split=1e-07, min_samples_leaf=1,\n",
+       "           min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
+       "           n_estimators=10, n_jobs=1, oob_score=False, random_state=None,\n",
+       "           verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 215,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "params = {'max_depth': 3,\n",
+    "          'n_estimators': 10}\n",
+    "reg = RandomForestRegressor()\n",
+    "reg.set_params(**params)\n",
+    "reg.fit(x_train[:100], y_train[:100])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true
@@ -551,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 221,
    "metadata": {
     "collapsed": false
    },
@@ -563,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 223,
    "metadata": {
     "collapsed": false
    },
@@ -579,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 222,
    "metadata": {
     "collapsed": true
    },
@@ -609,39 +600,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 234,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Score:0.06884878, min_data:100\n",
-      "Score:0.06883632, min_data:200\n",
-      "Score:0.06882509, min_data:300\n",
-      "Score:0.06881544, min_data:400\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "best = 0.06890525\n",
     "watchlist = [d_valid]\n",
-    "for mh in [100,200,300,400]:\n",
-    "    params['min_hessian'] = md\n",
+    "for lr in np.linspace(0.001, 0.002, 5):\n",
+    "    params['learning_rate'] = lr\n",
     "    clf = lgb.train(params, d_train, 500, watchlist, verbose_eval=False)\n",
     "    yvalid_pred = clf.predict(x_valid)\n",
     "    mae = mean_absolute_error(y_pred=yvalid_pred, y_true=y_valid)\n",
     "    if mae < best:\n",
-    "        print('Score:{0:.8f}, min_hessian:{1}'.format(mae, md))\n",
-    "#               print('Score:{0:.8f}, learning rate:{1}, max_bin:{2}, feature_fraction:{3}, bagging_freq:{4}, num_leaves:{5}'.format(mae, lr, m_bin, feat_frac, bag_freq, leaves))"
+    "        print('Score:{0:.8f}, learning_rate:{1}'.format(mae, lr))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 224,
    "metadata": {
     "collapsed": false
    },
@@ -653,39 +632,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 226,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/Leslie/anaconda3/lib/python3.5/site-packages/IPython/kernel/__main__.py:8: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "sample = pd.read_csv('sample_submission.csv')\n",
-    "sample['parcelid'] = sample['ParcelId']\n",
-    "df_test = sample.merge(prop, on='parcelid', how='left')\n",
-    "\n",
-    "x_test = df_test[train_columns]\n",
-    "\n",
     "for c in x_test.dtypes[x_test.dtypes == object].index.values:\n",
     "    x_test[c] = (x_test[c] == True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 227,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -695,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 228,
    "metadata": {
     "collapsed": false
    },
@@ -703,10 +664,10 @@
     {
      "data": {
       "text/plain": [
-       "0.011075240581464639"
+       "0.011597146093339524"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 228,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -717,19 +678,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 229,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "p_test = 0.9*p_test + 0.1*0.011\n",
+    "# p_test = 0.9*p_test + 0.1*0.011\n",
     "\n",
     "sub = pd.read_csv('sample_submission.csv')\n",
     "for c in sub.columns[sub.columns != 'ParcelId']:\n",
     "    sub[c] = p_test\n",
     "\n",
-    "sub.to_csv('result.csv', index=False, float_format='%.8f')"
+    "sub.to_csv('result_without_outliers.csv', index=False, float_format='%.8f')"
    ]
   },
   {
